# config-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
config_parser/: __init__.py  loader.py  parser.py
yaml_config/: __init__.py
